# src/app/api/items/route.ts
@@ -6,22 +6,35 @@ import {
   withPublicApiClient,
 } from "@/src/lib/api-client";
 import { NextRequest, NextResponse } from "next/server";
+import { ItemSearchRequest } from "@/src/lib/api-client";
 
 // Ensure dynamic behavior for SSR JWT handling
 export const dynamic = "force-dynamic";
 
 const getItemsHandler = async (client: ApiClient, _request: NextRequest) => {
   const url = _request.nextUrl;
+  const query = url.searchParams.get("query") || undefined;
+  const category = url.searchParams.get("category") || undefined;
+  const condition = url.searchParams.get("condition") || undefined;
   const page = parseInt(url.searchParams.get("page") || "0", 10);
   const size = parseInt(url.searchParams.get("size") || "10", 10);
   const sortBy = url.searchParams.get("sortBy") || "postedOn";
   const direction = url.searchParams.get("direction") || "desc";
 
+  console.log(
+    "GET items" +
+      ` page: ${page}, size: ${size}, sortBy: ${sortBy}, direction: ${direction} ` +
+      `query: ${query}, category: ${category}, condition: ${condition}`
+  );
+
   const items = await client.publicItemApi.getItems(
-    page,
-    size,
+    query,
+    category,
+    condition,
     sortBy,
-    direction
+    direction as ItemSearchRequest.sortDirection,
+    page,
+    size
   );
   return NextResponse.json(items);
 };
@@ -40,7 +53,7 @@ const postItemHandler = async (
     address: body.address,
     categoryId: body.categoryId,
     pickupPossible: body.pickupPossible,
-    deliveryPossible: body.deliveryPossible,
+    shippingPossible: body.shippingPossible,
     imageUrl: body.imageUrl,
   };
 
